jwt token support

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 sqlalchemy = "*"
+passlib = "*"
+bcrypt = "==4.0.1"
+python-multipart = "*"
+python-jose = "*"
 
 [dev-packages]
 
